--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
   </head>
   <body>
+    <div>
+      <p id="date"></p>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
     <script>
       dayjs().format();
